<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/Confirm__dialog_title"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="28sp"
        android:fontFamily="cursive"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/Confirm_message"
            android:gravity="center"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >
        <Button
            android:id="@+id/btn_confirm_upload"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            android:textAllCaps="false"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff" />
        <Button
            android:id="@+id/btn_cancel_confirm"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textAllCaps="false"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>