<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity.MovieDetails"
    android:orientation="vertical"
    android:fillViewport="true"

   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_name_tv"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:text="@string/movie_title"
            android:letterSpacing=".1"
            android:paddingRight="20dp"
            android:paddingTop="25dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1.5"
                   >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:id="@+id/movie_imagev"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:src="@drawable/movie_firth"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/film_image"
                            />
                        <TextView
                            android:id="@+id/move_name_tv"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:padding="6dp"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            android:background="#59000000"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="false"
                            android:layout_centerHorizontal="false"
                            android:layout_centerInParent="false"
                            />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center"
                  >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginStart="25dp"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/movie_rating"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/movie_rating_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textSize="14sp"
                            />
                    </LinearLayout>
                    <Button
                        android:id="@+id/make_fav_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:text="@string/movie_fav"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"/>
                 </LinearLayout>
            </LinearLayout>

      <LinearLayout
            android:id="@+id/trailer_fame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
          android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trailers"
                android:textSize="17sp"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movie_trailer_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:minHeight="250dp"
                    >
            </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/review_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/film_review"
            android:textSize="17sp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_review_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                >
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>


